--- a/src/Insight.Box.FrontEnd/index.html
+++ b/src/Insight.Box.FrontEnd/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Insight Box</title>
   </head>
-  <body>
+  <body class="theme-bg">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
