Fix background color issue

--- a/src/Insight.Box.FrontEnd/index.html
+++ b/src/Insight.Box.FrontEnd/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Insight Box</title>
   </head>
-  <body>
+  <body class="theme-bg">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
