Add response mapping

--- a/src/Insight.Box.FrontEnd/index.html
+++ b/src/Insight.Box.FrontEnd/index.html
@@ -13,5 +13,6 @@
   <body class="theme-bg">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
   </body>
 </html>
